--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-seaborn
-pandas
-numpy
-datetime
-pandas_datareader
-matplotlib
-functools
-scipy
+matplotlib==3.5.1
+numpy==1.21.5
+pandas==1.4.2
+pandas_datareader==0.10.0
+plotly==5.6.0
+scipy==1.7.3
+seaborn==0.11.2
+streamlit==1.9.2
